Bug 195768 - Web process is put to suspended when holding locked WebSQL files
Summary: Web process is put to suspended when holding locked WebSQL files
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sihui Liu
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-03-14 15:05 PDT by Sihui Liu
Modified: 2019-03-14 18:55 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.97 KB, patch)
2019-03-14 15:31 PDT, Sihui Liu
no flags Details | Formatted Diff | Diff
Patch for landing (2.97 KB, patch)
2019-03-14 18:04 PDT, Sihui Liu
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sihui Liu 2019-03-14 15:05:43 PDT
Web process should not get suspended when it's holding locked database file and performing close.
Comment 1 Sihui Liu 2019-03-14 15:31:09 PDT
Created attachment 364706 [details]
Patch
Comment 2 Geoffrey Garen 2019-03-14 16:17:53 PDT
Comment on attachment 364706 [details]
Patch

In file included from ./inspector/CommandLineAPIHost.cpp:34:
In file included from /Volumes/Data/EWS/WebKit/Source/WebCore/Modules/webdatabase/Database.h:32:
/Volumes/Data/EWS/WebKit/Source/WebCore/platform/sql/SQLiteDatabase.h:159:28: error: expected ';' at end of declaration list
    bool m_useWAL { false }
Comment 3 Geoffrey Garen 2019-03-14 16:51:42 PDT
Comment on attachment 364706 [details]
Patch

r=me if you fix the build (missing semicolon)
Comment 4 Sihui Liu 2019-03-14 18:04:58 PDT
Created attachment 364744 [details]
Patch for landing
Comment 5 WebKit Commit Bot 2019-03-14 18:53:39 PDT
The commit-queue encountered the following flaky tests while processing attachment 364744 [details]:

loader/load-defer-resume-crash.html bug 195438 (authors: max.hong.shen@gmail.com and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 6 WebKit Commit Bot 2019-03-14 18:54:28 PDT
Comment on attachment 364744 [details]
Patch for landing

Clearing flags on attachment: 364744

Committed r242983: <https://trac.webkit.org/changeset/242983>
Comment 7 WebKit Commit Bot 2019-03-14 18:54:30 PDT
All reviewed patches have been landed.  Closing bug.
Comment 8 Radar WebKit Bug Importer 2019-03-14 18:55:18 PDT
<rdar://problem/48912114>