Web process is put to suspended when holding locked WebSQL files https://bugs.webkit.org/show_bug.cgi?id=195768

Reviewed by Geoffrey Garen.

We need to keep processes active during database close, because SQLite database may run a checkpoint operation
and lock database files.

* platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::useWALJournalMode):
(WebCore::SQLiteDatabase::close):
* platform/sql/SQLiteDatabase.h:


Canonical link: https://commits.webkit.org/210070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242983 268f45cc-cd09-0410-ab3c-d52691b4dbfc